# Pimpl

./: CMakeLists.txt  README.md
src/: Book.cpp  Book.h  BookImpl.h  main.cpp
